add social icons

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         <video muted loop class="video" src="./images/video3.mp4"></video>
       </div>
     </div>
+
+
+    <ul class="social">
+      <li><a href="https://www.youtube.com/@Sightools"><img src="./images/youtube-color-icon.png" alt=""></a></li>
+      <li><a href="https://vk.com/id2750992"><img src="./images/vk-icon.png" alt=""></a></li>
+      <li><a href="https://t.me/JohnHancock"><img src="./images/telegram-icon.png" alt=""></a></li>
+    </ul>
+
   </section>
 
   <script
